[tool.poetry]
name = "python-tdd-book"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.5"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]
selenium = "^4.1.0"
ipython = "^7.29.0"
black = "^21.11b1"
Fabric3 = "^1.14.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
